rescaling of axis ok

--- a/d3test.html
+++ b/d3test.html
@@ -28,12 +28,13 @@ var data = DataToZero();
     data = getRaw(0);
 
 
- lineChart = lineChart()
-        .x(d3.time.scale().domain([new Date(2014,6,31), new Date(2014,7,1)]))
-        .y(d3.scale.linear().domain([0, 1]));
+lineChart = lineChart()
+    // .x(d3.time.scale().domain([new Date(2014,6,31), new Date(2014,7,1)]))
+    // .y(d3.scale.linear().domain([0, 1]));
 
-lineChart.addSeries(data);
-
+lineChart.setSeries(data);
+ // console.log('svg1',svg.selectAll("x axis"))
+        // .call(xAxis);
 lineChart.render();
 
     // d.forEach(function(e){
@@ -54,19 +55,17 @@ lineChart.render();
 
 function getPastDays(days){
     // data = getRaw(days);
-    var dateLowerLimit = new Date(2014, 6, 31-days);
-    var today = new Date(2014,7,1);
+    // var dateLowerLimit = new Date(2014, 6, 31-days);
+    // var today = new Date(2014,7,1);
+    lineChart.setSeries(getRaw(days-1));
+    lineChart.update(days);
+    // lineChart.x(d3.time.scale().domain([dateLowerLimit , today]))
 
-    lineChart.x(d3.time.scale().domain([dateLowerLimit , today]))
+    // lineChart.select("x axis").transition().duration(10).call(xAxis);
 
-    // _svg.select("x axis")
-    //     .transition()
-    //     .call(xAxis);
+    // lineChart.addSeries(data);
 
-
-    lineChart.addSeries(data);
-
-    lineChart.render();
+    // lineChart.render();
     ///////////////
     // console.log(ok);
   // var newData = DataToZero();
@@ -95,6 +94,324 @@ function getPastDays(days){
 }
 
 
+
+
+////////////////////////////////////////////////////////////////////////////
+//////
+
+
+///line chart
+
+
+
+/////////////////////date object one////////
+function getRaw(days){
+    var result = [];
+    var count = 0;
+    var rows = 0;
+    var today = new Date(2014,7,1);
+    var dateLowerLimit = new Date(2014, 6, 31-days);
+    rawData.forEach(function(d, i){
+
+        // if (d.Date === '7/31/2014'){
+        if (dateLowerLimit < new Date(d.Date+' '+d.Time) && new Date(d.Date+' '+d.Time) < today){
+            rows++;
+            if ( d.Activity === '1'){
+                count++;
+
+            }
+            var format = d3.time.format("%Y-%m-%d-%H-%S");
+            var date = new Date(d.Date+' '+d.Time);
+            var ddd = format(date);
+
+            var percent = count/rows;
+            result.push( {x : date, y: percent} );
+
+        }
+    });
+    result.sort(function(obj1, obj2) {
+        return obj1.x - obj2.x;
+    });
+    return result;
+}
+
+
+
+
+
+
+
+function lineChart() { // <-1A
+    var _chart = {};
+
+    var _width = 600, _height = 300, // <-1B
+            _margins = {top: 30, left: 30, right: 30, bottom: 30},
+            _x, _y,
+            _data = [],
+            _colors = d3.scale.category10(),
+            _svg,
+            _bodyG,
+            _xAxis,
+            _line,
+            _xmax,
+            _xmin,
+            _ymax,
+            _ymin;
+
+    _chart.render = function () { // <-2A
+        if (!_svg) {
+            _x = d3.time.scale().range([0, quadrantWidth()]).domain([new Date(_xmax.valueOf() - 24 * 60 * 60 * 1000), _xmax]);
+            _y = d3.scale.linear().range([quadrantHeight(), 0]).domain([0,1]);
+            _xAxis = d3.svg.axis().scale(_x).orient("bottom");
+            _svg = d3.select("body").append("svg") // <-2B
+                    .attr("height", _height)
+                    .attr("width", _width);
+
+            renderAxes(_svg, true);
+
+            defineBodyClip(_svg);
+        }
+
+        renderBody(_svg);
+    };
+
+    _chart.update = function(days){
+        var dateLowerLimit = new Date(2014, 6, 31-days);
+        var today = new Date(2014,7,1);
+
+        _x.domain([new Date(_xmax.valueOf() - days *  24 * 60 * 60 * 1000), _xmax]);
+        renderAxes(_svg, false);
+        renderLines();
+
+
+    }
+
+    // _chart.rescale = function(days){
+    // var dateLowerLimit = new Date(2014, 6, 31-days);
+    // var today = new Date(2014,7,1);
+    // lineChart.x(d3.time.scale().domain([dateLowerLimit , today]));
+
+    // lineChart.addSeries(data);
+
+    // lineChart.render();
+
+    // // this.select("x axis").transition().duration(10);
+    // //  renderXAxes(_svg);
+    // //  d3.select("x axis").transition().duration(10).call(xAxis);
+    // // renderXAxes(_svg);
+    // }
+
+    function renderAxes(svg, isInit) {
+        var axesG;
+        if (isInit){
+            axesG = svg.append("g")
+                .attr("class", "axes");
+        }else{
+            axesG = svg.select('g.axes');
+        }
+
+        renderXAxis(axesG, isInit);
+
+        renderYAxis(axesG);
+    }
+
+    function renderXAxis(axesG, isInit){
+        if (isInit){
+            axesG.append("g")
+                    .attr("class", "x axis")
+                    .attr("transform", function () {
+                        return "translate(" + xStart() + "," + yStart() + ")";
+                    })
+                    .call(_xAxis);
+        }
+        axesG.select('.x.axis').transition().call(_xAxis);
+
+        // d3.selectAll("g.x g.tick")
+        //     .append("line")
+        //         .classed("grid-line", true)
+        //         .attr("x1", 0)
+        //         .attr("y1", 0)
+        //         .attr("x2", 0)
+        //         .attr("y2", quadrantWidth());
+    }
+
+    function renderYAxis(axesG){
+        var yAxis = d3.svg.axis()
+                .scale(_y.range([quadrantHeight(), 0]))
+                .orient("left");
+
+        axesG.append("g")
+                .attr("class", "y axis")
+                .attr("transform", function () {
+                    return "translate(" + xStart() + "," + yEnd() + ")";
+                })
+                .call(yAxis);
+
+         // d3.selectAll("g.y g.tick")
+         //    .append("line")
+         //        .classed("grid-line", true)
+         //        .attr("x1", 0)
+         //        .attr("y1", 0)
+         //        .attr("x2", quadrantWidth())
+         //        .attr("y2", 0);
+    }
+
+    function defineBodyClip(svg) { // <-2C
+        var padding = 5;
+
+        svg.append("defs")
+                .append("clipPath")
+                .attr("id", "body-clip")
+                .append("rect")
+                .attr("x", 0 - padding)
+                .attr("y", 0)
+                .attr("width", quadrantWidth() + 2 * padding)
+                .attr("height", quadrantHeight());
+    }
+
+    function renderBody(svg) { // <-2D
+        if (!_bodyG)
+            _bodyG = svg.append("g")
+                    .attr("class", "body")
+                    .attr("transform", "translate("
+                        + xStart() + ","
+                        + yEnd() + ")") // <-2E
+                    .attr("clip-path", "url(#body-clip)");
+
+        renderLines();
+
+        // renderDots();
+    }
+
+    function renderLines() {
+        _line = d3.svg.line()
+                        .x(function (d) { return _x(d.x); })
+                        .y(function (d) { return _y(d.y); });
+
+        _bodyG.selectAll("path.line")
+                    .data([_data])
+                .enter()
+                .append("path")
+                .style("stroke", function (d, i) {
+                    return _colors(i);
+                })
+                .attr("class", "line");
+
+        _bodyG.selectAll("path.line")
+                .data([_data])
+                .transition()
+                .attr("d", function (d) { return _line(d); });
+    }
+
+    // function renderDots() {
+    //     _data.forEach(function (list, i) {
+    //         _bodyG.selectAll("circle._" + i) //<-4E
+    //                     .data(list)
+    //                 .enter()
+    //                 .append("circle")
+    //                 .attr("class", "dot _" + i);
+
+    //         list.forEach(function (point,i) {
+    //         _bodyG.selectAll("circle._" + i)
+    //                 .data(point)
+    //                 .style("stroke", function (d) {
+    //                     return _colors(i); //<-4F
+    //                 })
+    //                 .transition() //<-4G
+    //                 .attr("cx", function (d) { return _x(d.x); })
+    //                 .attr("cy", function (d) { return _y(d.y); })
+    //                 .attr("r", 4.5);
+    //             });
+    //     });
+    // }
+
+    function xStart() {
+        return _margins.left;
+    }
+
+    function yStart() {
+        return _height - _margins.bottom;
+    }
+
+    function xEnd() {
+        return _width - _margins.right;
+    }
+
+    function yEnd() {
+        return _margins.top;
+    }
+
+    function quadrantWidth() {
+        return _width - _margins.left - _margins.right;
+    }
+
+    function quadrantHeight() {
+        return _height - _margins.top - _margins.bottom;
+    }
+
+    _chart.width = function (w) {
+        if (!arguments.length) return _width;
+        _width = w;
+        return _chart;
+    };
+
+    _chart.height = function (h) { // <-1C
+        if (!arguments.length) return _height;
+        _height = h;
+        return _chart;
+    };
+
+    _chart.margins = function (m) {
+        if (!arguments.length) return _margins;
+        _margins = m;
+        return _chart;
+    };
+
+    _chart.colors = function (c) {
+        if (!arguments.length) return _colors;
+        _colors = c;
+        return _chart;
+    };
+
+    _chart.x = function (x) {
+        if (!arguments.length) return _x;
+        _x = x;
+        return _chart;
+    };
+
+    _chart.y = function (y) {
+        if (!arguments.length) return _y;
+        _y = y;
+        return _chart;
+    };
+
+    _chart.setSeries = function (series) { // <-1D
+        var xmin = d3.min(series, function(d){return d.x;});
+        var xmax = d3.max(series, function(d){return d.x;});
+        var ymin = d3.min(series, function(d){return d.y;});
+        var ymax = d3.max(series, function(d){return d.y;});
+        if ( typeof _xmin === "undefined" ){
+            _xmin = xmin;
+            _xmax = xmax;
+            _ymin = ymin;
+            _ymax = ymax;
+        }else{
+            _xmin = Math.min(_xmin, xmin);
+            _xmax = Math.max(_xmax, xmax);
+
+            _ymin = Math.min(_ymin, ymin);
+            _ymax = Math.max(_ymax, ymax);
+
+        }
+        _data = series;
+        return _chart;
+    };
+
+    return _chart; // <-1E
+}
+
+
+///////////////////pie chart
 
 function pieChart(){
         var _chart = {};
@@ -242,274 +559,11 @@ function pieChart(){
         return _chart;
     }
 
-////////////////////////////////////////////////////////////////////////////
-//////
-
-
-///line chart
-
-
-
-/////////////////////date object one////////
-function getRaw(days){
-    var result = [];
-    var count = 0;
-    var rows = 0;
-    var today = new Date(2014,7,1);
-    var dateLowerLimit = new Date(2014, 6, 31-days);
-    rawData.forEach(function(d, i){
-
-        // if (d.Date === '7/31/2014'){
-        if (dateLowerLimit < new Date(d.Date+' '+d.Time) && new Date(d.Date+' '+d.Time) < today){
-            rows++;
-            if ( d.Activity === '1'){
-                count++;
-
-            }
-            var format = d3.time.format("%Y-%m-%d-%H-%S");
-            var date = new Date(d.Date+' '+d.Time);
-            var ddd = format(date);
-
-            var percent = count/rows;
-            // console.log(count, rows);
-            result.push( {x : date, y: percent} );
-
-        }
-    });
-    // console.log('result',result);
-
-    result.sort(function(obj1, obj2) {
-        return obj1.x - obj2.x;
-    });
-    return result;
-}
-
-
-
-
-
-
-
-function lineChart() { // <-1A
-    var _chart = {};
-
-    var _width = 600, _height = 300, // <-1B
-            _margins = {top: 30, left: 30, right: 30, bottom: 30},
-            _x, _y,
-            _data = [],
-            _colors = d3.scale.category10(),
-            _svg,
-            _bodyG,
-            _line;
-
-    _chart.render = function () { // <-2A
-        if (!_svg) {
-            _svg = d3.select("body").append("svg") // <-2B
-                    .attr("height", _height)
-                    .attr("width", _width);
-
-            renderAxes(_svg);
-
-            defineBodyClip(_svg);
-        }
-
-        renderBody(_svg);
-    };
-
-    function renderAxes(svg) {
-        var axesG = svg.append("g")
-                .attr("class", "axes");
-
-        renderXAxis(axesG);
-
-        renderYAxis(axesG);
-    }
-
-    function renderXAxis(axesG){
-        console.log(axesG);
-               var xAxis = d3.svg.axis()
-                .scale(_x.range([0, quadrantWidth()]))
-                .orient("bottom");
-
-        axesG.append("g")
-                .attr("class", "x axis")
-                .attr("transform", function () {
-                    return "translate(" + xStart() + "," + yStart() + ")";
-                })
-                .call(xAxis);
-
-        d3.selectAll("g.x g.tick")
-            .append("line")
-                .classed("grid-line", true)
-                .attr("x1", 0)
-                .attr("y1", 0)
-                .attr("x2", 0)
-                .attr("y2", quadrantWidth());
-    }
-
-    function renderYAxis(axesG){
-        var yAxis = d3.svg.axis()
-                .scale(_y.range([quadrantHeight(), 0]))
-                .orient("left");
-
-        axesG.append("g")
-                .attr("class", "y axis")
-                .attr("transform", function () {
-                    return "translate(" + xStart() + "," + yEnd() + ")";
-                })
-                .call(yAxis);
-
-         d3.selectAll("g.y g.tick")
-            .append("line")
-                .classed("grid-line", true)
-                .attr("x1", 0)
-                .attr("y1", 0)
-                .attr("x2", quadrantWidth())
-                .attr("y2", 0);
-    }
-
-    function defineBodyClip(svg) { // <-2C
-        var padding = 5;
-
-        svg.append("defs")
-                .append("clipPath")
-                .attr("id", "body-clip")
-                .append("rect")
-                .attr("x", 0 - padding)
-                .attr("y", 0)
-                .attr("width", quadrantWidth() + 2 * padding)
-                .attr("height", quadrantHeight());
-    }
-
-    function renderBody(svg) { // <-2D
-        if (!_bodyG)
-            _bodyG = svg.append("g")
-                    .attr("class", "body")
-                    .attr("transform", "translate("
-                        + xStart() + ","
-                        + yEnd() + ")") // <-2E
-                    .attr("clip-path", "url(#body-clip)");
-
-        renderLines();
-
-        renderDots();
-    }
-
-    function renderLines() {
-        _line = d3.svg.line() //<-4A
-                        .x(function (d) { return _x(d.x); })
-                        .y(function (d) { return _y(d.y); });
-
-        _bodyG.selectAll("path.line")
-                    .data(_data)
-                .enter() //<-4B
-                .append("path")
-                .style("stroke", function (d, i) {
-                    return _colors(i); //<-4C
-                })
-                .attr("class", "line");
-
-        _bodyG.selectAll("path.line")
-                .data(_data)
-                .transition() //<-4D
-                .attr("d", function (d) { return _line(d); });
-    }
-
-    function renderDots() {
-        _data.forEach(function (list, i) {
-            _bodyG.selectAll("circle._" + i) //<-4E
-                        .data(list)
-                    .enter()
-                    .append("circle")
-                    .attr("class", "dot _" + i);
-
-            list.forEach(function (point,i) {
-            _bodyG.selectAll("circle._" + i)
-                    .data(point)
-                    .style("stroke", function (d) {
-                        return _colors(i); //<-4F
-                    })
-                    .transition() //<-4G
-                    .attr("cx", function (d) { return _x(d.x); })
-                    .attr("cy", function (d) { return _y(d.y); })
-                    .attr("r", 4.5);
-                });
-        });
-    }
-
-    function xStart() {
-        return _margins.left;
-    }
-
-    function yStart() {
-        return _height - _margins.bottom;
-    }
-
-    function xEnd() {
-        return _width - _margins.right;
-    }
-
-    function yEnd() {
-        return _margins.top;
-    }
-
-    function quadrantWidth() {
-        return _width - _margins.left - _margins.right;
-    }
-
-    function quadrantHeight() {
-        return _height - _margins.top - _margins.bottom;
-    }
-
-    _chart.width = function (w) {
-        if (!arguments.length) return _width;
-        _width = w;
-        return _chart;
-    };
-
-    _chart.height = function (h) { // <-1C
-        if (!arguments.length) return _height;
-        _height = h;
-        return _chart;
-    };
-
-    _chart.margins = function (m) {
-        if (!arguments.length) return _margins;
-        _margins = m;
-        return _chart;
-    };
-
-    _chart.colors = function (c) {
-        if (!arguments.length) return _colors;
-        _colors = c;
-        return _chart;
-    };
-
-    _chart.x = function (x) {
-        if (!arguments.length) return _x;
-        _x = x;
-        return _chart;
-    };
-
-    _chart.y = function (y) {
-        if (!arguments.length) return _y;
-        _y = y;
-        return _chart;
-    };
-
-    _chart.addSeries = function (series) { // <-1D
-        _data.push(series);
-        return _chart;
-    };
-
-    return _chart; // <-1E
-}
-
 
 
 </script>
 
-<button onclick="getPastDays(0)">today</button>
+<button onclick="getPastDays(1)">today</button>
 <button onclick="getPastDays(3)">3 days</button>
 <button onclick="getPastDays(7)">7 days</button>
 <button onclick="getPastDays(14)">14 days</button>
