--- a/d3test.html
+++ b/d3test.html
@@ -22,75 +22,59 @@ function DataToZero(){
   return data;
 }
 
-var data = DataToZero();
+var pieData = DataToZero();
   d3.csv('data.csv', function(d){
     rawData = d;
     data = getRaw(0);
 
 
 lineChart = lineChart()
-    // .x(d3.time.scale().domain([new Date(2014,6,31), new Date(2014,7,1)]))
-    // .y(d3.scale.linear().domain([0, 1]));
-
 lineChart.setSeries(data);
- // console.log('svg1',svg.selectAll("x axis"))
-        // .call(xAxis);
 lineChart.render();
 
-    // d.forEach(function(e){
-    //   data.forEach(function(p){
-    //     if(p.device === e.Device){
-    //       p.qte++
-    //     }
-    //   })
-    // })
+    d.forEach(function(e){
+      pieData.forEach(function(p){
+        if(p.device === e.Device){
+          p.qte++
+        }
+      })
+    })
 
-  // chart = pieChart()
-  //   .data(data);
-  //   chart.render();
+  chart = pieChart()
+    .data(pieData);
+    chart.render();
 
   });
 
 
 
 function getPastDays(days){
-    // data = getRaw(days);
-    // var dateLowerLimit = new Date(2014, 6, 31-days);
-    // var today = new Date(2014,7,1);
+
     lineChart.setSeries(getRaw(days-1));
     lineChart.update(days);
-    // lineChart.x(d3.time.scale().domain([dateLowerLimit , today]))
 
-    // lineChart.select("x axis").transition().duration(10).call(xAxis);
+  var newData = DataToZero();
+  var pastDaysData = [];
+  var today = new Date(2014, 06, 31);
+  var dateLimit = new Date (2014, 06, 31-days)
 
-    // lineChart.addSeries(data);
+  rawData.forEach(function(e){
+    var month = e.Date[0] -1,
+        day = e.Date.substr(2,2),
+        year = e.Date.substr(5,4);
 
-    // lineChart.render();
-    ///////////////
-    // console.log(ok);
-  // var newData = DataToZero();
-  // var pastDaysData = [];
-  // var today = new Date(2014, 06, 31);
-  // var dateLimit = new Date (2014, 06, 31-nbr)
+    var ThisEntryDate = new Date (year, month, day)
+     if ( ThisEntryDate >= dateLimit ){
+        newData.forEach(function(p){
+          if(p.device === e.Device){
+            p.qte++
+          }
+      })
+     }
 
-  // rawData.forEach(function(e){
-  //   var month = e.Date[0] -1,
-  //       day = e.Date.substr(2,2),
-  //       year = e.Date.substr(5,4);
-
-  //   var ThisEntryDate = new Date (year, month, day)
-  //    if ( ThisEntryDate >= dateLimit ){
-  //       newData.forEach(function(p){
-  //         if(p.device === e.Device){
-  //           p.qte++
-  //         }
-  //     })
-  //    }
-////////////////
-
-  // })
-  //      chart.data(newData);
-  //     chart.render();
+  })
+    chart.data(newData);
+    chart.render();
 }
 
 
@@ -185,22 +169,6 @@ function lineChart() { // <-1A
 
 
     }
-
-    // _chart.rescale = function(days){
-    // var dateLowerLimit = new Date(2014, 6, 31-days);
-    // var today = new Date(2014,7,1);
-    // lineChart.x(d3.time.scale().domain([dateLowerLimit , today]));
-
-    // lineChart.addSeries(data);
-
-    // lineChart.render();
-
-    // // this.select("x axis").transition().duration(10);
-    // //  renderXAxes(_svg);
-    // //  d3.select("x axis").transition().duration(10).call(xAxis);
-    // // renderXAxes(_svg);
-    // }
-
     function renderAxes(svg, isInit) {
         var axesG;
         if (isInit){
@@ -226,13 +194,6 @@ function lineChart() { // <-1A
         }
         axesG.select('.x.axis').transition().call(_xAxis);
 
-        // d3.selectAll("g.x g.tick")
-        //     .append("line")
-        //         .classed("grid-line", true)
-        //         .attr("x1", 0)
-        //         .attr("y1", 0)
-        //         .attr("x2", 0)
-        //         .attr("y2", quadrantWidth());
     }
 
     function renderYAxis(axesG){
@@ -247,13 +208,6 @@ function lineChart() { // <-1A
                 })
                 .call(yAxis);
 
-         // d3.selectAll("g.y g.tick")
-         //    .append("line")
-         //        .classed("grid-line", true)
-         //        .attr("x1", 0)
-         //        .attr("y1", 0)
-         //        .attr("x2", quadrantWidth())
-         //        .attr("y2", 0);
     }
 
     function defineBodyClip(svg) { // <-2C
@@ -303,27 +257,6 @@ function lineChart() { // <-1A
                 .attr("d", function (d) { return _line(d); });
     }
 
-    // function renderDots() {
-    //     _data.forEach(function (list, i) {
-    //         _bodyG.selectAll("circle._" + i) //<-4E
-    //                     .data(list)
-    //                 .enter()
-    //                 .append("circle")
-    //                 .attr("class", "dot _" + i);
-
-    //         list.forEach(function (point,i) {
-    //         _bodyG.selectAll("circle._" + i)
-    //                 .data(point)
-    //                 .style("stroke", function (d) {
-    //                     return _colors(i); //<-4F
-    //                 })
-    //                 .transition() //<-4G
-    //                 .attr("cx", function (d) { return _x(d.x); })
-    //                 .attr("cy", function (d) { return _y(d.y); })
-    //                 .attr("r", 4.5);
-    //             });
-    //     });
-    // }
 
     function xStart() {
         return _margins.left;
